--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Responsive Resume</title>
+	<title>Dwi Yudha Hardiansyah</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<!--Custom fonts. To improve load times, remove this and update the h1 styling in style.css--> 
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet' type='text/css'>
+	<!-- <link href='http://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet' type='text/css'> -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Source+Code+Pro:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<!-- favicon -->
@@ -20,19 +23,28 @@
 	
 	<!-- Header-->
 	<header>
-		<h1>Your Name</h1>
-		<p>Job Title or Skill Set</p>
+		<h1>Dwi Yudha Hardiansyah</h1>
+		<p>Web Developer</p>
 	</header>
 	
 	<div class="container">
 		
 		<!-- Introduction-->
 		<section class="center">
-			<h1>Welcome!</h1>
+			<h1>Hello World!</h1>
 			<p>
-				This is a good place to introduce yourself. What do you love to do? Where are you from? What is your current job?
-				This also might be a good place to link to your resume, email, or portfolio as well.
+				I'm seasoned programmer with 10 years+ of experience in developing complex web & mobile based application.
+			<!-- </p>
+			<p> -->
+				I built dozen of PHP based web and application using Laravel, CodeIgniter, YII, CakePHP, PrestaShop, WordPress and Magento.
 			</p>
+			<p>
+				JavaScript is also my things, let say ReactJS, Angular, NodeJS, KnockoutJS, Meteor, VueJS, Lodash, Bower, Gulp, Grunt, Webpack, you name it.
+			</p>
+			<p>
+				You need mobile apps that simply run on every platform? Don't worry I can get the job done with Cordova, Ionic Framework, React Native, Xamarin or even Flutter.
+			</p>
+			<p>I am also very passionate with the latest front-end tech related to 3D rendering and WebGL!</p>
 		</section>
 		
 		<hr>
@@ -97,7 +109,7 @@
 	<div class="container">
 	
 		<section class="education">	
-			<h2>B.S. Information Systems and Operations Management from the University of Maryland.</h2>
+			<h2>B.S. Information Systems from<br/>Computer University of Indonesia (UNIKOM)</h2>
 		</section>
 		
 		<hr>
@@ -106,21 +118,24 @@
 		<section class="experience">
 			<div class="row">
 				<div class="grid-2">
-					<h2>Company Name</h2>
-					<p>Nov. 2013 - Dec. 2014</p>
+					<h2>Witco</h2>
+					<p>Paris, France<br/>Feb. 2017 - Present</p>
 				</div>
 				<div class="grid-4">
 					<ul>
-						<li>This is a place to give highlights of your work and responsibilities</li>
-						<li>This is a place to give highlights of your work and responsibilities</li>
-						<li>This is a place to give highlights of your work and responsibilities. This is an example of a longer block with more text.</li>
+						<li>Manage reservation module.</li>
+						<li>Creating and implementing design plans.</li>
+						<li>Review code and pull request.</li>
+						<li>Analyze information to determine, recommend, and plan implementation of a new system or modification of an existing system.</li>
+						<li>Supervise and assign work to programmers, designers, technologists, technicians, or other engineering or scientific personnel.</li>
+						<li>Keeping up-to-date with industry trends and technology developments.</li>
 					</ul>
 				</div>
 			</div>
 			<div class="row">
 				<div class="grid-2">
-					<h2>Company Name</h2>
-					<p>Sept. 2012 - Nov. 2013</p>
+					<h2>Semesta Akademi</h2>
+					<p>Jakarta, Indonesia<br/>Jan. 2020 - Present</p>
 				</div>
 				<div class="grid-4">
 					<ul>
@@ -180,7 +195,7 @@
 		<!--Footer-->
 		<footer class="center">
 			<hr>
-			<span>&copy; Your Name 2014</span>
+			<span>&copy; Dwi Yudha H 2023</span>
 		</footer>
 		
 	</div><!-- End Container -->
