--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- <link href='http://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet' type='text/css'> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Source+Code+Pro:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&family=Source+Code+Pro:ital,wght@0,700;1,300&display=swap" rel="stylesheet">
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<!-- favicon -->
@@ -33,9 +33,9 @@
 		<section class="center">
 			<h1>Hello World!</h1>
 			<p>
-				I'm seasoned programmer with 10 years+ of experience in developing complex web & mobile based application.
-			<!-- </p>
-			<p> -->
+				My name is Dwi Yudha H a.k.a <strong>kuya</strong>. I'm seasoned programmer with 10 years+ of experience in developing complex web & mobile based application.
+			</p>
+			<p>
 				I built dozen of PHP based web and application using Laravel, CodeIgniter, YII, CakePHP, PrestaShop, WordPress and Magento.
 			</p>
 			<p>
@@ -68,21 +68,24 @@
 		<section class="testimonial">
 			<div class="row">
 				<div class="grid-2">
-					<img src="img/re.png">
-					<h2>Their Name</h2>
-					<p>You can use this as a place to put recommendations, accolades and testimonials</p>
+					<a href="https://www.linkedin.com/in/dwiyudha/" target="_blank">
+						<img src="img/li.png">
+					</a>
+					<h2>LinkedIn</h2>
 				</div>
 				
 				<div class="grid-2">
-					<img src="img/re.png">
-					<h2>Their Name</h2>
-					<p>You can use this as a place to put recommendations, accolades and testimonials</p>
+					<a href="https://www.upwork.com/freelancers/~01e4a7ea5651e30a9e" target="_blank">
+						<img src="img/upwork.png">
+					</a>
+					<h2>Upwork</h2>
 				</div>
 		
 				<div class="grid-2">
-					<img src="img/re.png">
-					<h2>Their Name</h2>
-					<p>You can use this as a place to put recommendations, accolades and testimonials</p>
+					<a href="https://github.com/kuyarawa" target="_blank">
+						<img src="img/gh.png">
+					</a>
+					<h2>GitHub</h2>
 				</div>
 			</div>
 		</section>
@@ -93,12 +96,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="grid-3">
-					<img src="img/spotlight.jpg">
+					<img src="img/witco.svg">
 				</div>
 				<div class="grid-3">
 					<h1>Project Spotlight</h1>
-					<p>Give a brief description of what this project is and what role you played. It can also be helpful to include a link</p>
-					<a href="#">View Project</a>
+					<p>Witco is an all-in-one app for life at work. Tap in. Lights on. Coffee on. AC up. A lot goes into creating an environment for people to do their best work.</p>
+					<a href="https://www.witco.io/" target="_blank">View Project</a>
 				</div>
 			</div>
 		</div>
@@ -147,14 +150,56 @@
 			</div>
 			<div class="row">
 				<div class="grid-2">
-					<h2>Company Name</h2>
-					<p>Aug. 2011 - Sept. 2012</p>
+					<h2>Freelance Programmer</h2>
+					<p>Worldwide<br/>Dec. 2010 - Present</p>
 				</div>
 				<div class="grid-4">
 					<ul>
-						<li>This is a place to give highlights of your work and responsibilities</li>
-						<li>This is a place to give highlights of your work and responsibilities</li>
-						<li>This is a place to give highlights of your work and responsibilities. This is an example of a longer block with more text.</li>
+						<li>hehehe</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="grid-2">
+					<h2>TADO TV</h2>
+					<p>Jakarta, Indonesia<br/>Mar. 2017 - Jan 2020</p>
+				</div>
+				<div class="grid-4">
+					<ul>
+						<li>hehehe</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="grid-2">
+					<h2>Ebizu</h2>
+					<p>Bandung, Indonesia<br/>Sep. 2016 - Mar 2017</p>
+				</div>
+				<div class="grid-4">
+					<ul>
+						<li>hehehe</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="grid-2">
+					<h2>Vox Teneo</h2>
+					<p>Bandung, Indonesia<br/>Aug. 2014 - Sep 2016</p>
+				</div>
+				<div class="grid-4">
+					<ul>
+						<li>hehehe</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="grid-2">
+					<h2>Solmit Bangun Indonesia</h2>
+					<p>Bandung, Indonesia<br/>Mar. 2011 - Oct 2013</p>
+				</div>
+				<div class="grid-4">
+					<ul>
+						<li>hehehe</li>
 					</ul>
 				</div>
 			</div>
@@ -165,19 +210,19 @@
 		<section>
 			<!--List of skills-->
 			<div class="row">
-				<div class="grid-2">
+				<div class="grid">
 					<h1>Skills</h1>
 					<ul>
-						<li>HTML</li>
-						<li>CSS</li>
-						<li>Javascript</li>
-						<li>Angular.js</li>
-						<li>Photoshop</li>
-						<li>Git</li>
+						<li>Web Developer:  Vanilla JS, TypeScript, Angular, ReactJS, KnockoutJS, HTML5, CSS3, Bootstrap, WebGL, ThreeJS, Marzipano, jQuery, Webpack, GraphQL</li>
+						<li>Mobile Developer: Flutter, React Native, Ionic, Xamarin</li>
+						<li>Backend Developer: NodeJS, PHP, Ruby, MeteorJS, NestJS, AdonisJS, Laravel, YII</li>
+						<li>Database Admininstrator: MySql, MongoDB, Postgresql, Elastic Search</li>
+						<li>System Integrator: Microsoft365, Google Service, Condeco, Micro Services</li>
+						<li>Tools: Git, Jira, Trello, Figma, Zeplin, Storybook, Postman, Docker, Terminal</li>
 					</ul>
 				</div>
 				
-				<div class="grid-4">
+				<div class="grid">
 					<h1>In Conclusion</h1>
 					<p>
 						This is a good spot to highlight experiance and skills. Make sure to include a call to action like a link to your website, or your email address.
